--- a/logistics/src/main/resources/application.yml
+++ b/logistics/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 9000
+  servlet:
+    context-path: /Logistics
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/lms?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding-utf8&useSSL=false
