--- a/logistics/src/main/resources/application.yml
+++ b/logistics/src/main/resources/application.yml
@@ -4,10 +4,10 @@ server:
   port: 8089
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/lms?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding-utf8&useSSL=false
+    url: jdbc:mysql://8.140.112.152:3306/lms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234
+    password: Root!!2018
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       # 配置测试查询语句
