--- a/logistics/pom.xml
+++ b/logistics/pom.xml
@@ -65,6 +65,13 @@
             <version>1.2.62</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.13</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
